# myblog

./: MANIFEST.in  README.rst  docker-compose.yml  llaveprivada.pem  micertificado.pem  setup.cfg
compose/flask/: Dockerfile
compose/nginx/: Dockerfile
myblog/: __init__.py  auth.py  blog.py  db.py  form.py  schema.sql
myblog/static/: app.js  style.css
myblog/templates/: base.html
myblog/templates/auth/: forgot.html  login.html  register.html
myblog/templates/blog/: create.html  delete_blog.html  delete_comment.html  detail.html  index.html  update.html
nginx/: domain_production_backend_conf  nginx.conf  production_backend_conf
tests/: conftest.py  data.sql  test_auth.py  test_blog.py  test_db.py  test_factory.py
