[metadata]
name = myblog
version = 1.0.0
url = https://github.com/jfpinedap/myblog.git
license = BSD-3-Clause
maintainer = jfpinedap
maintainer_email = jfpinedap@gmail.com
description = The basic blog app built in Flask.
long_description = file: README.rst
long_description_content_type = text/x-rst

[options]
packages = find:
include_package_data = true
install_requires =
    Flask
    pytest
    coverage
    WTForms
    email_validator
    gunicorn

[options.extras_require]
test =
    pytest

[tool:pytest]
testpaths = tests

[coverage:run]
branch = True
source =
    myblog
